# sven

./: .gitignore  README.md  config.json  impl.md  improv.md  plan.md  plan_3b327411.md  plan_f401df58.md  plan_tools.md  pyproject.toml  review.md  rich_markdown_stream.md  spec.md  summary.md  tasks.json  todo.md  work.md
app/: loop.py  main.py
src/sven/: __init__.py  agent.py  chat.py  color.py  config.py  core.py  core_logic.py  history.py  memory.py  memory_manager.py  orchestrator.py  security.py  skills.py  storage_manager.py  task.py  task_model.py  taskqueue.py  token_counter.py
src/sven/tools/: dotnet.py  edit.py  find.py  getdatetime.py  git.py  grep.py  java.py  listfiles.py  manpage.py  memory_tools.py  python.py  read.py  rust.py  task.py  touch.py  webfetch.py  websearch.py
src/sven/tools/git/: commit.py
src/sven/tools/python/: compilefile.py  compilefiles.py
src/sven/tools/vim/: autoformat.py  edit.py  read.py
