[project]
name = "sven"
version = "0.1.0"
description = ""
authors = [
    {name = "Josef Schulz",email = "j.schulz@alaun.de"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama (>=0.6.2,<0.7.0)"
]

[tool.poetry]
packages = [{include = "sven", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
